[package]
name = "synology-filestation-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dokan = "0.3.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
urlencoding = "2.1.3"
widestring = "0.4.3"
winapi = "0.3.9"
