[package]
name = "synology-filestation-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dirs = "5.0.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
sqlite = "0.31.1"
tokio = "1.32.0"
urlencoding = "2.1.3"
widestring = "0.4.3"

[target.'cfg(target_family = "windows")'.dependencies]
dokan = "0.3.1"
winapi = "0.3.9"

[target.'cfg(target_family = "unix")'.dependencies]
fuser = "0.13.0"
libc = "0.2.51"
